<resources>
    <string name="app_name">Food Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_the_delicious_food_on_you_phone">All the delicious food on you phone</string>
    <string name="if_you_re_hungry_start">If you\'re hungry...</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="price">%s₺</string>
    <string name="cart_empty">Your cart is empty!</string>
    <string name="order_confirmed">Order is confirmed!</string>
    <string name="total_price">%d₺</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet, Sign Up !</string>
    <string name="sign_in">SIGN IN</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="welcome">Welcome,</string>
    <string name="already_registered_sign_in">Already Registered, Sign In !</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>

    <string name="fill_blanks_text">Fill in the blanks!</string>
    <string name="password_insufficient">Password length must be minimum 6 characters long!</string>
    <string name="ınvalid_alert">Invalid email address!</string>
    <string name="wrong_username_pass">Wrong email and password!</string>
    <string name="check_information">Check Information</string>
    <string name="password_is_not_the_same">Password is not the same.</string>
    <string name="verification_email_error">Your information does not match, or you did not register.</string>
    <string name="this_mail_is_in_use">This mail is in use.</string>

    <string name="hint_home_screen_search_box">Search food</string>
    <string name="food_name">Food Name</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="homeMenu">Home</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="we_make_food_ordering_fast_simple_and_free">We make food ordering fast, simple and free.</string>
    <string name="fresh_food">Fresh Food</string>
    <string name="order_anything_you_want_we_gurantee_to_provide_you_quality_food">Order anything you want. We gurantee to provide you quality food.</string>
    <string name="easy_payment">Easy Payment</string>
    <string name="we_have_wide_payment_option_pay_according_to_your_comfort">We have wide payment option. Pay according to your comfort.</string>
    <string name="start">START</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_food_delivery">Welcome to Food Delivery</string>
    <string name="forget_password">Forget Password</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="delicious_food_for_you">Delicious food for you</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="privacy_policy_and_terms_of_use">Privacy policy and terms of use</string>
    <string name="feedback_form">Feedback form</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="selin_htiyar">Selin İhtiyar</string>
    <string name="selin_gmail_com">selin@gmail.com</string>
    <string name="mail">Mail</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>


</resources>