<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etInEmail"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/type_your_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/etInPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etInPassword"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/type_your_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInEmail"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="324dp"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_shape"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:text="@string/forget_password"
            android:textColor="#8F8E8E"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>